# SoC-Consistency

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  socc-check.yml
data/examples/: rk3588s-orangepi-5.dts
data/soc/allwinner/: a527.yaml  a733.yaml  axp223.yaml  h3.yaml  h6.yaml
data/soc/amlogic/: g12a.yaml  gxbb.yaml  gxl.yaml  sc2.yaml
data/soc/nxp/: imx8mp.yaml
data/soc/qualcomm/: sc7180.yaml  sdm845.yaml
data/soc/rockchip/: rk3308.yaml  rk3528.yaml  rk3588.yaml
docs/: CHANGELOG.md  demo.cast  design.md  development.md  rules.md
meta-socc/: README.md
meta-socc/classes/: socc.bbclass
meta-socc/conf/: layer.conf
meta-socc/recipes-core/socc/: socc_1.0.bb
scripts/: demo_script.sh  generate_dts_fixture.sh  make_demo.sh
socc/: __init__.py  __main__.py  amp.py  autofix.py  bom.py  bootstrap.py  bounds.py  cache.py  cli.py  compliance.py  config.py  depgraph.py  diagnostics.py  diagram.py  explain.py  fmea.py  gc.py  irqcheck.py  kernel_audit.py  live_probe.py  matrix_audit.py  memmap.py  migrate.py  netlist_crosscheck.py  preprocess.py  qemu.py  report.py  sku_audit.py  smartdiff.py  smoke.py  socdef.py  suppress.py  trace.py
socc/codegen/: __init__.py  bringup.py  ci.py  docs.py  headers.py  saleae.py
socc/commands/: __init__.py  _shared.py  analyze_cmds.py  audit_cmds.py  core.py  generate_cmds.py  sim_cmds.py  socdef_cmds.py  viz_cmds.py
socc/crosscheck/: __init__.py  comparator.py
socc/engine/: __init__.py  checker.py
socc/live/: __init__.py  connector.py
socc/model/: __init__.py  base.py  clock.py  power.py  soc.py  thermal.py
socc/netlist/: __init__.py  checker.py  parser.py
socc/overlay/: __init__.py  merger.py
socc/parser/: __init__.py  dts_mapper.py  dts_parser.py
socc/rules/: __init__.py  base.py  registry.py
socc/rules/allwinner/: __init__.py  clock_rules.py  gpio_rules.py  iommu_rules.py  power_rules.py
socc/rules/amlogic/: __init__.py  clock_rules.py  gpio_rules.py  power_rules.py  sec_rules.py
socc/rules/common/: __init__.py  _classifiers.py  bus_rules.py  bw_rules.py  compat_rules.py  interrupt_rules.py  pin_rules.py  (+8 more)
socc/simulation/: __init__.py  _constraints.py  _renderer.py  clock_sim.py  power_sim.py  reset_sim.py  runner.py  types.py
socc/simulator/: __init__.py  shell.py
socc/visualize/: __init__.py  pinmap.py  power_seq.py  topology.py
tests/: test_socc.py
(+26 files in other folders)
